--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Proyecto-Cami",
+  "name": "proyecto-cami",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Aleex1237/Proyecto-Cami#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
 }
